--- a/Web/beer/templates/login.html
+++ b/Web/beer/templates/login.html
@@ -29,7 +29,7 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarResponsive">
                   <ul class="navbar-nav ms-auto">
-                      <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{url_for('auth.login')}}l">로그인</a></li>
+                      <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{url_for('auth.login')}}">로그인</a></li>
                       <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{url_for('auth.register')}}">회원가입</a></li>
                   </ul>
               </div>
@@ -77,7 +77,7 @@
                         <!-- Name input-->
                         <div class="form-floating mb-3">
                             <input class="form-control" id="name" name="name" type="text" placeholder="Enter your name..." required/>
-                            <label for="name">이름</label>
+                            <label for="name">ID</label>
 
                         </div>
                         <!-- Email address input-->
