--- a/Web/beer/templates/login.html
+++ b/Web/beer/templates/login.html
@@ -49,7 +49,7 @@
                 <div class="divider-custom-line"></div>
             </div>
             <!-- Masthead Subheading-->
-            <p class="masthead-subheading font-weight-light mb-0">CF 기반 - 맥주 Top 6 - 맥주 커뮤니티</p>
+            <p class="masthead-subheading font-weight-light mb-0">CF 기반 - 맥주 추천 - 맥주 커뮤니티</p>
         </div>
     </header>
 
