--- a/Web/beer/templates/ver2.html
+++ b/Web/beer/templates/ver2.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>추천</title>
+        <title>개인화 추천</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="/static/assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -28,10 +29,7 @@
                   <i class="fas fa-bars"></i>
               </button>
               <div class="collapse navbar-collapse" id="navbarResponsive">
-                  <ul class="navbar-nav ms-auto">
-                      <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{url_for('auth.login')}}">로그인</a></li>
-                      <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{url_for('auth.register')}}">회원가입</a></li>
-                  </ul>
+                
               </div>
           </div>
       </nav>
@@ -49,49 +47,303 @@
                 <div class="divider-custom-line"></div>
             </div>
             <!-- Masthead Subheading-->
-            <p class="masthead-subheading font-weight-light mb-0">CF 기반 - 맥주 Top 6 - 맥주 커뮤니티</p>
+            <p class="masthead-subheading font-weight-light mb-0">CF 기반 - 맥주 추천 - 맥주 커뮤니티</p>
         </div>
     </header>
 
-      <section class="page-section" id="contact">
+    <section class="page-section portfolio" id="portfolio">
         <div class="container">
-            <!-- Contact Section Heading-->
-            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">로그인</h2>
+            <!-- Portfolio Section Heading-->
+            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Top 1</h2>
             <!-- Icon Divider-->
             <div class="divider-custom">
                 <div class="divider-custom-line"></div>
                 <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                 <div class="divider-custom-line"></div>
             </div>
-            <!-- Contact Section Form-->
+            <!-- Portfolio Grid Items-->
             <div class="row justify-content-center">
-                <div class="col-lg-8 col-xl-7">
-                    <!-- * * * * * * * * * * * * * * *-->
-                    <!-- * * SB Forms Contact Form * *-->
-                    <!-- * * * * * * * * * * * * * * *-->
-                    <!-- This form is pre-integrated with SB Forms.-->
-                    <!-- To make this form functional, sign up at-->
-                    <!-- https://startbootstrap.com/solution/contact-forms-->
-                    <!-- to get an API token!-->
-                    <form id="contactForm" method="post">
-                        <!-- Name input-->
-                        <div class="form-floating mb-3">
-                            <input class="form-control" id="name" name="name" type="text" placeholder="Enter your name..." required/>
-                            <label for="name">ID</label>
-
-                        </div>
-                        <!-- Email address input-->
-                        <div class="form-floating mb-3">
-                            <input class="form-control" id="password" name="password" type="password" placeholder="name@example.com" required />
-                            <label for="password">비밀번호</label>
-                           
-                        </div>
-                        <button class="btn btn-primary btn-xl abled" id="submitButton" type="submit">Send</button>
-                    </form>
+                  <div class="col-md-6">
+                      <img class="img-fluid" src="/static/assets/img/beer_image/{{result.0}}.jpg" alt="..." />            
                 </div>
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">{{result.0}}</h2>
+                <div id='myDiv'></div>
+            <script>
+                var jsonData = {{ targetJson2|tojson }};
+                var data = JSON.parse(jsonData);
+
+                data = [
+                  {
+                  type: 'scatterpolar',
+                  r: data['cluster3'],
+                  theta: ['Aroma', 'Appearance', 'Flavor','Mouthfeel', 'Overall'],
+                  fill: 'toself',
+                  name: 'Good',
+                  marker : { color : 'salmon'}
+                  },
+                  {
+                  type: 'scatterpolar',
+                  r: data['cluster2'],
+                  theta: ['Aroma', 'Appearance', 'Flavor','Mouthfeel', 'Overall'],
+                  fill: 'toself',
+                  name: 'SoSo',
+                  marker : { color : 'blue'}
+                  },
+                  {
+                  type: 'scatterpolar',
+                  r: data['cluster1'],
+                  theta: ['Aroma', 'Appearance', 'Flavor','Mouthfeel', 'Overall'],
+                  fill: 'toself',
+                  name: 'Sad',
+                  marker : { color : 'skyblue'}
+                  },
+                  {
+                  type: 'scatterpolar',
+                  r: data['beer_cluster1'],
+                  theta: ['Aroma', 'Appearance', 'Flavor','Mouthfeel', 'Overall'],
+                  fill: 'toself',
+                  name: data['beer_name'][0],
+                  marker : { color : 'green'}
+                  },
+                ]
+
+                layout = {
+                  polar: {
+                    radialaxis: {
+                      visible: true,
+                      range: [0, 1]
+                    }
+                  },
+                  title: {
+                    text:'추천 맥주 클러스터 유형',
+                    font: {
+                      size: 24
+                    },
+                    x : 0.47
+                  }
+                }
+
+
+            Plotly.newPlot("myDiv", data, layout)
+            </script>
+            <div id='line1'></div>
+            <script>
+                var jsonData = {{ targetJson2|tojson }};
+                var data = JSON.parse(jsonData);
+
+                var trace1 = {
+                  x: data['tmp_year'][0],
+                  y: data['tmp_ratings'][0],
+                  type: 'scatter'
+                }
+
+                var result = [trace1];
+                layout = {
+                  title: {
+                    text:'추천 맥주의 연도별 평점 트렌드',
+                    font: {
+                      size: 24
+                    },
+                    x : 0.5
+                  }
+                }
+                Plotly.newPlot('line1', result, layout);
+            </script>
+
+<h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Top 2</h2>
+<!-- Icon Divider-->
+<div class="divider-custom">
+    <div class="divider-custom-line"></div>
+    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+    <div class="divider-custom-line"></div>
+</div>
+<!-- Portfolio Grid Items-->
+<div class="row justify-content-center">
+      <div class="col-md-6">
+          <img class="img-fluid" src="/static/assets/img/beer_image/{{result.1}}.jpg" alt="..." />            
+    </div>
+    <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">{{result.1}}</h2>
+    <div id='myDiv1'></div>
+<script>
+    var jsonData = {{ targetJson2|tojson }};
+    var data = JSON.parse(jsonData);
+
+    data = [
+      {
+      type: 'scatterpolar',
+      r: data['cluster3'],
+      theta: ['Aroma', 'Appearance', 'Flavor','Mouthfeel', 'Overall'],
+      fill: 'toself',
+      name: 'Good',
+      marker : { color : 'salmon'}
+      },
+      {
+      type: 'scatterpolar',
+      r: data['cluster2'],
+      theta: ['Aroma', 'Appearance', 'Flavor','Mouthfeel', 'Overall'],
+      fill: 'toself',
+      name: 'SoSo',
+      marker : { color : 'blue'}
+      },
+      {
+      type: 'scatterpolar',
+      r: data['cluster1'],
+      theta: ['Aroma', 'Appearance', 'Flavor','Mouthfeel', 'Overall'],
+      fill: 'toself',
+      name: 'Sad',
+      marker : { color : 'skyblue'}
+      },
+      {
+      type: 'scatterpolar',
+      r: data['beer_cluster2'],
+      theta: ['Aroma', 'Appearance', 'Flavor','Mouthfeel', 'Overall'],
+      fill: 'toself',
+      name: data['beer_name'][1],
+      marker : { color : 'green'}
+      },
+    ]
+
+    layout = {
+      polar: {
+        radialaxis: {
+          visible: true,
+          range: [0, 1]
+        }
+      },
+      title: {
+        text:'추천 맥주 클러스터 유형',
+        font: {
+          size: 24
+        },
+        x : 0.47
+      }
+    }
+
+
+Plotly.newPlot("myDiv1", data, layout)
+</script>
+<div id='line2'></div>
+<script>
+    var jsonData = {{ targetJson2|tojson }};
+    var data = JSON.parse(jsonData);
+
+    var trace1 = {
+      x: data['tmp_year'][1],
+      y: data['tmp_ratings'][1],
+      type: 'scatter'
+    }
+
+    var result = [trace1];
+    layout = {
+      title: {
+        text:'추천 맥주의 연도별 평점 트렌드',
+        font: {
+          size: 24
+        },
+        x : 0.5
+      }
+    }
+    Plotly.newPlot('line2', result, layout);
+</script>
+
+<h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Top 3</h2>
+<!-- Icon Divider-->
+<div class="divider-custom">
+    <div class="divider-custom-line"></div>
+    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+    <div class="divider-custom-line"></div>
+</div>
+<!-- Portfolio Grid Items-->
+<div class="row justify-content-center">
+      <div class="col-md-6">
+          <img class="img-fluid" src="/static/assets/img/beer_image/{{result.2}}.jpg" alt="..." />            
+    </div>
+    <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">{{result.2}}</h2>
+    <div id='myDiv2'></div>
+<script>
+    var jsonData = {{ targetJson2|tojson }};
+    var data = JSON.parse(jsonData);
+
+    data = [
+      {
+      type: 'scatterpolar',
+      r: data['cluster3'],
+      theta: ['Aroma', 'Appearance', 'Flavor','Mouthfeel', 'Overall'],
+      fill: 'toself',
+      name: 'Good',
+      marker : { color : 'salmon'}
+      },
+      {
+      type: 'scatterpolar',
+      r: data['cluster2'],
+      theta: ['Aroma', 'Appearance', 'Flavor','Mouthfeel', 'Overall'],
+      fill: 'toself',
+      name: 'SoSo',
+      marker : { color : 'blue'}
+      },
+      {
+      type: 'scatterpolar',
+      r: data['cluster1'],
+      theta: ['Aroma', 'Appearance', 'Flavor','Mouthfeel', 'Overall'],
+      fill: 'toself',
+      name: 'Sad',
+      marker : { color : 'skyblue'}
+      },
+      {
+      type: 'scatterpolar',
+      r: data['beer_cluster3'],
+      theta: ['Aroma', 'Appearance', 'Flavor','Mouthfeel', 'Overall'],
+      fill: 'toself',
+      name: data['beer_name'][2],
+      marker : { color : 'green'}
+      },
+    ]
+
+    layout = {
+      polar: {
+        radialaxis: {
+          visible: true,
+          range: [0, 1]
+        }
+      },
+      title: {
+        text:'추천 맥주 클러스터 유형',
+        font: {
+          size: 24
+        },
+        x : 0.47
+      }
+    }
+
+
+Plotly.newPlot("myDiv2", data, layout)
+</script>
+<div id='line3'></div>
+<script>
+    var jsonData = {{ targetJson2|tojson }};
+    var data = JSON.parse(jsonData);
+
+    var trace1 = {
+      x: data['tmp_year'][2],
+      y: data['tmp_ratings'][2],
+      type: 'scatter'
+    }
+
+    var result = [trace1];
+    layout = {
+      title: {
+        text:'추천 맥주의 연도별 평점 트렌드',
+        font: {
+          size: 24
+        },
+        x : 0.5
+      }
+    }
+    Plotly.newPlot('line3', result, layout);
+</script>
             </div>
-        </div>
     </section>
+    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
