--- a/Web/beer/templates/index.html
+++ b/Web/beer/templates/index.html
@@ -18,6 +18,7 @@
         <link href="/static/css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
+      
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
@@ -30,7 +31,7 @@
                     <ul class="navbar-nav ms-auto">
                         {% if current_user.is_authenticated %}
                         {% if count >=5 %}
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{url_for('recomm.ver2')}}">추천 맥주</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{url_for('recomm.ver2')}}">TOP 3</a></li>
                         {% endif %}
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{url_for('auth.logout')}}">로그아웃</a></li>
                         {% else %}
